--- a/es/vocabulary-avoid.yaml
+++ b/es/vocabulary-avoid.yaml
@@ -2,7 +2,7 @@ verbs:
 
 - necesitar
 - ayudar
-- travajar
+- trabajar
 - estudiar
 
 nouns:
@@ -18,13 +18,13 @@ nouns:
 - el novio
 - la novia
 - el libro
-- el dia
+- el día
 - el hotel
 - la casa
 - la clase
 - la pared
 - la música
-- el mano
+- la mano
 - el parque
 
 
