--- a/es/vocabulary-practice.yaml
+++ b/es/vocabulary-practice.yaml
@@ -92,7 +92,7 @@ nouns:
 - el zapato
 - el deporte
 - el vecino
-- el vecina
+- la vecina
 - el hombre
 - la mujer
 - el lápiz
@@ -142,8 +142,6 @@ mods:
 - caliente
 
 - preocupado
-- frustrado
-- confundido
 - tranquilo
 
 - alegre: hi
